[package]
name = "mqtt-reactivator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
drasi-source-sdk = "0.1.22"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4"] }

[features]
default = []
