[package]
name = "drasi-reaction-mqtt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MQTT reaction plugin for drasi-lib"

[lib]
name = "drasi_reaction_mqtt"
path = "src/lib.rs"

[dependencies]
drasi-lib.workspace = true
drasi-core.workspace = true
rumqttc.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
