[package]
name = "drasi-source-mqtt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MQTT source plugin for drasi-lib"

[lib]
name = "drasi_source_mqtt"
path = "src/lib.rs"

[dependencies]
drasi-lib.workspace = true
drasi-core.workspace = true
rumqttc.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
uuid.workspace = true
anyhow.workspace = true
dashmap = "5.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
